fix name being not centered in header

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -232,6 +232,7 @@ h6 {
 #header.header-top h1 {
   margin-right: auto;
   font-size: 36px;
+  margin-bottom: 0px;
 }
 
 #header.header-top .container {
